[tool.poetry]
name = "prototype"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12, < 3.13, >= 3.8"
pyside6 = "^6.6.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
black = "^24.3.0"
mypy = "^1.9.0"
pytest = "^8.1.1"
hypothesis = "^6.99.13"
pytest-asyncio = "^0.23.6"

[tool.black]
line-length = 200

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
